--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "backend",
+  "name": "indoorparadise",
   "version": "1.0.0",
-  "description": "",
+  "description": "\"IndoorParadise-Plant marketplace\"",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server",
-    "server": "nodemon backend/server",
-    "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node backend/server"
   },
-  "author": "\"Shivani\"",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ShiCho489/IndoorParadise.git"
+  },
+  "author": "Shivani",
   "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20"
+  "bugs": {
+    "url": "https://github.com/ShiCho489/IndoorParadise/issues"
+  },
+  "homepage": "https://github.com/ShiCho489/IndoorParadise#readme",
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
