--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "\"IndoorParadise-Plant marketplace\"",
   "main": "server.js",
-  "type": "module"
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server",
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/ShiCho489/IndoorParadise#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.8.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
